[package]
name          = "nimbus-v0"
version       = "0.1.0"
edition       = "2021"

[lib]
crate-type = ["cdylib"]

[features]
library = []

[dependencies]
cosmos-sdk-proto = "0.19"
cosmwasm-schema = { version = "1.2" }
cosmwasm-std = { version = "1.5.0", features = ["ibc3"] }
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-cw-value = "0.7"
serde_json = "1.0"
serde_yaml = "0.9"
cw-storage-plus = { version = "1.1" }
thiserror = "1"

[dev-dependencies]
cw-multi-test = "0.13.4"